# DART

./: .gitignore  LICENSE  README.md  record_sensors.py
Arduino_files/: README_arduino.md
DART_dynamic_models/: README.md  setup.py
Data_processing/: 1_fitting_friction.py  2_fitting_acceleration_curve.py  3_fitting_steering_curve.py  4_steering_delay.py  5_fitting_tire_model.py  functions_for_data_processing.py
Lab_instructions_for_DART/: .~lock.dart_lab_instructions.odt#  README.md  dart_lab_instructions.odt  vicon_position_2_velocity.py
ROS_packages/vicon_pkg/: CMakeLists.txt  README.md  package.xml
ROS_packages/vicon_pkg/launch/: jetracer_1_stream.launch  jetracer_all_stream.launch
ROS_packages/vicon_pkg/rviz/: demo.rviz
System_identification/: 1_0_fitting_friction_on_board_sensors.py  2_0_fitting_motor_and_friction_on_board_sensors.py  3_0_fitting_steering_curve_on_board_sensors.py  3_1_fitting_steering_curve_vicon_data.py  4_0_steering_delay_on_board_sensors.py  5_0_fitting_tire_model.py  6_0_fitting_steering_dynamics_1st_order.py  7_0_fitting_additional_velocity_drop_in_curves.py  8_0_fitting_SVGP_model.py  8_1_fitting_SVGP_model_rosbag.py  8_1_fitting_actuator_dynamics.py  8_2_fitting_SVGP_model_rosbag.py  8_2_fitting_actuator_dynamics.py  8_3_show_weights.py  9_0_validating_models_check_accelerations.py  9_1_validating_models_long_term_prediction.py  9_2_validating_models_low_velocity.py  Data_compression_with_SVGP.py  Measurement_noise_estimation_SVGP.py  dart_dynamic_models.py  testing_1_order_coefficients.py  testing_SVGP_data_compression.py  (+1 more)
(+926 files in other folders)
